syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.optimus.osasco.duat.protobuf";
option go_package = "duat/pb";
option objc_class_prefix = "HLW";

package duat;

message DocumentReply {
  string id = 1;
  uint64 document_type_id = 2;
  uint64 department_id = 3;
  string code = 4;
  string identity = 5;
  string name = 6;
  optional string comment = 7;
  optional string storage = 8;
  string doc_date = 9;
  uint64 created_at = 10;
  uint64 updated_at = 11;
  optional uint64 deleted_at = 12;
}

message DocumentListReply {
  repeated DocumentReply list = 1;
}